--- a/assets/sass/pages/_menu_page.scss
+++ b/assets/sass/pages/_menu_page.scss
@@ -85,12 +85,12 @@
             flex-direction: column;
             flex: 1;
             margin: 0 0 0 0.9375rem;
-            gap: 0.3125rem;
             @include truncate-text;
             & h3 {
                 padding: 0.9375rem 0 0 0;
                 font-size: $font-size-large;
                 @include truncate-text;
+                padding-bottom: 0.3125rem;
             }
             & p {
                 padding: 0 0 0.9375rem 0;
